# alibaba-cloud-ops-mcp-server

./: Dockerfile  README.md  README_mcp_args.md  README_mcp_args_zh.md  README_zh.md  pyproject.toml  smithery.yaml
src/alibaba_cloud_application_management_mcp_server/: pyproject.toml
src/alibaba_cloud_application_management_mcp_server/src/alibaba_cloud_application_management_mcp_server/: server.py
src/alibaba_cloud_application_management_mcp_server/src/alibaba_cloud_application_management_mcp_server/alibabacloud/: utils.py
src/alibaba_cloud_application_management_mcp_server/src/alibaba_cloud_application_management_mcp_server/tools/: api_tools.py  application_management_tools.py  local_tools.py  oos_tools.py
src/alibaba_cloud_ops_mcp_server/: pyproject.toml  server.py
src/alibaba_cloud_ops_mcp_server/alibabacloud/: utils.py
src/alibaba_cloud_ops_mcp_server/src/alibaba_cloud_ops_mcp_server/: server.py
src/alibaba_cloud_ops_mcp_server/src/alibaba_cloud_ops_mcp_server/alibabacloud/: utils.py
src/alibaba_cloud_ops_mcp_server/src/alibaba_cloud_ops_mcp_server/tools/: application_management_tools.py
src/alibaba_cloud_ops_mcp_server/tools/: api_tools.py  application_management_tools.py  cms_tools.py  oos_tools.py  other_tools.py
tests/: test_server.py
tests/alibabacloud/: test_api_meta_client.py  test_utils.py
tests/tools/: test_api_tools.py  test_application_management_tools.py  test_local_tools.py  test_oos_tools.py  test_oss_tools.py
