[project]
name = "alibaba-cloud-application-management-mcp-server"
version = "0.1.0"
description = "The application management MCP server for Alibaba Cloud"
readme = "README.md"
authors = [
    { name = "Zhao Shuaibo", email = "zhaoshuaibo.zsb@alibaba-inc.com" },
    { name = "Meng Junwei", email = "mengjunwei.mjw@alibaba-inc.com" }
]
requires-python = ">=3.10"
dependencies = [
    "alibabacloud-cms20190101>=3.1.4",
    "alibabacloud-ecs20140526>=6.1.0",
    "alibabacloud-oos20190601>=3.5.0",
    "alibabacloud_oss_v2>=1.1.0",
    "alibabacloud-credentials>=1.0.3",
    "alibabacloud-credentials-api==1.0.1",
    "click>=8.1.8",
    "fastmcp==2.13.0",
    "pydantic==2.11.3",
    "alibaba-cloud-ops-mcp-server"
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"
dependencies = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alibaba_cloud_application_management_mcp_server"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]

[project.scripts]
alibaba_cloud_application_management_mcp_server = "alibaba_cloud_application_management_mcp_server:main"